--- a/commissions.html
+++ b/commissions.html
@@ -522,6 +522,22 @@
         <div class="row">
           <h1 class="title">Our Commissions</h1>
           <div class="col-xs-6 col-sm-4 col-md-3 document">
+            <a href="wwwork.html">
+            <img src="img/document.jpg" class="img-responsive" alt="WWWORK"><span>WWWORK</span></a>
+          </div>
+          <div class="col-xs-6 col-sm-4 col-md-3 document">
+            <a href="quitting.html">
+            <img src="img/document.jpg" class="img-responsive" alt="Quitting"><span>Quitting</span></a>
+          </div>
+          <div class="col-xs-6 col-sm-4 col-md-3 document">
+            <a href="dolphinaccelerator.html">
+            <img src="img/document.jpg" class="img-responsive" alt="Dolphin Accelerator"><span>Dolphin Accelerator</span></a>
+          </div>
+          <div class="col-xs-6 col-sm-4 col-md-3 document">
+            <a href="malaonda.html">
+            <img src="img/document.jpg" class="img-responsive" alt="Mala Onda"><span>Mala Onda</span></a>
+          </div>
+          <div class="col-xs-6 col-sm-4 col-md-3 document">
             <a href="openambiguity.html">
             <img src="img/document.jpg" class="img-responsive" alt="Open Ambuguity"><span>Open Ambuguity</span></a>
           </div>
