--- a/index.html
+++ b/index.html
@@ -541,76 +541,58 @@
   <div class="brand"><img class="img-responsive shake-little shake-constant shake-constant--hover logo" src="img/anxious-logo-www.png"></div>
 
   <!-- START: CARDS ROW 1 -->
-  <div id="card1" class="card draggable center">
-    <em>How to Make Yourself into a Commissioning Body<br/>in 5 Easy Steps</em><br/><br/><img class="img-responsive" src="img/us.jpg"><br/><small>performative lecture and workshop<br/><a href="http://2016.transmediale.de/content/how-to-turn-yourself-into-a-commissioning-body-in-five-easy-steps" target="_blank">transmediale / conversationpiece</a><br/><br/>download the <a href="http://anxioustomake.ga/media/HowToMakeYourselfIntoACommissioningBodyWorkbook.pdf" target="_blank">workbook</a> + <a href="http://anxioustomake.ga/media/scantron.pdf" target="_blank">scantron</a> </small>
+
+  <div id="card9" class="card draggable center cse">
+    Center for the Sharing Economy (CSE)<br/><br/>
+    <a href="cse.html"><img class="img-responsive" src="img/cse-ad-1.png"></a>
   </div>
 
-  <div id="card2" class="card draggable center">
-    <em>They Paid Me to Give<br/>You a Tour of the Internet</em><br/><br/>
-    <a href="temporaryartreview.html"><img class="img-responsive" src="img/tar.gif"></a><br/>
-    <small>Net Art Intervention, Commissioned by Temporary Art Review</small>
-  </div>
-
-  <div id="card3" class="card draggable center">
+  <div id="card10" class="card draggable center">
     <em>Open Ambiguity<br/>Keynote, OSF 2016</em><br/><br/><br/><br/>
     <iframe src="https://player.vimeo.com/video/177629356?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
     <small>Video, Commissioned Lecture</small>
   </div>
 
-  <div id="card4" class="card draggable center">
-    <em>The Future of Work<br/>Testimonials</em><br/><br/><br/><br/>
-    <iframe src="https://player.vimeo.com/video/163223022?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
-    <small>Video, testimonials</small>
+  <div id="card11" class="card draggable center">
+    <em>How to Make Yourself into a Commissioning Body<br/>in 5 Easy Steps</em><br/><br/><img class="img-responsive" src="img/us.jpg"><br/><small>performative lecture and workshop<br/><a href="http://2016.transmediale.de/content/how-to-turn-yourself-into-a-commissioning-body-in-five-easy-steps" target="_blank">transmediale / conversationpiece</a><br/><br/>download the <a href="http://anxioustomake.ga/media/HowToMakeYourselfIntoACommissioningBodyWorkbook.pdf" target="_blank">workbook</a> + <a href="http://anxioustomake.ga/media/scantron.pdf" target="_blank">scantron</a> </small>
   </div>
 
-  <div id="card5" class="card draggable center">
+  <div id="card12" class="card draggable center">
+   <img class="new" src="img/new.gif"/>
+    <em>Dolphin Accelerator</em><br/><br/>
+    <iframe src="https://player.vimeo.com/video/186337332?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
+    <small>Video</small>
+  </div>
+
+  <div id="card13" class="card draggable center">
+    <img class="new" src="img/new.gif"/>
+    <em>Mala Onda</em><br/><br/><br/><br/>
+    <iframe src="https://player.vimeo.com/video/186196449?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
+    <small>Video, Survey</small>
+  </div>
+
+  <div id="card14" class="card draggable center">
     <em>Liat Berdugo + Emily Martinez<br/>as Five Twins</em><br/><br/><br/>
     <iframe src="https://player.vimeo.com/video/154158545?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
     <small>Video, Commissioned Performance</small>
   </div>
 
-  <div id="card6" class="card draggable center cse">
-    <img class="new" src="img/new.gif"/>
-    Center for the Sharing Economy (CSE)<br/><br/>
-    <a href="cse.html"><img class="img-responsive" src="img/cse-ad-1.png"></a>
-  </div>
-
   <!-- END: CARDS ROW 1 -->
 
   <!-- START: CARDS ROW 2 -->
-  <div id="card14" class="card draggable center">
-    Quizzes &amp; Surveys<br/><br/>
-    <a href="quizzes.html"><img class="img-responsive" src="img/quiz.jpg"></a>
-  </div>
 
-  <div id="card13" class="card draggable center downloads">
-    Downloads<br/><br/><br/><br/>
-    <a href="downloads.html"><img class="img-responsive" src="img/cloud2.png"></a>
-  </div>
-
-  <div id="card12" class="card draggable center commissions">
-    Commissions<br/><br/><br/><br/>
-    <a href="commissions.html"><img class="img-responsive" src="img/document.jpg"></a>
-  </div>
-
-  <div id="card11" class="card draggable center generators">
-    Generators<br/><br/><br/><br/>
-    <a href="generators.html"><img class="img-responsive" src="img/database.jpg"></a>
-  </div>
-
-  <div id="card10" class="card draggable center">
+  <div id="card1" class="card draggable center">
     Store<br/><br/><br/>
     <a href="store.html" target="_blank"><img class="img-responsive" src="img/store-pillow.jpg"></a><br/>
     <small></small>
   </div>
 
-  <div id="card9" class="card draggable news">
-    <img class="new" src="img/new.gif"/>
+  <div id="card2" class="card draggable news">
     <div class="center">News</div><br/>
     <small>
-      <strong>11.2016</strong> <a href="http://v2.nl/the-gig-is-up/" target="_blank">The Gig is Up</a>, V2_ Institute for the Unstable Media, Rotterdam (forthcoming)
+      <strong>11.2016</strong> <a href="http://v2.nl/the-gig-is-up/" target="_blank">The Gig is Up</a>, V2_ Institute for the Unstable Media, Rotterdam
       <br/><br/>
-      <strong>11.2016</strong> <em>Side Gig</em>, <a href="http://www.b4bel4b.com/upcoming" target="_blank">B4BEL4B</a>, Oakland, CA (forthcoming)
+      <strong>11.2016</strong> <em>Side Gig</em>, <a href="http://www.b4bel4b.com/upcoming" target="_blank">B4BEL4B</a>, Oakland, CA
       <br/><br/>
       <strong>11.2016</strong> <em>Liat Berdugo &amp; Emily Martinez as 5 Twins</em>, <a href="http://realfuturefair.com/" target="_blank">Real Future Fair</a>, Oakland, CA
       <br/><br/>
@@ -644,9 +626,36 @@
     </small>    
   </div>
 
+  <div id="card3" class="card draggable center">
+    Surveys<br/><br/>
+    <a href="quizzes.html"><img class="img-responsive" src="img/quiz.jpg"></a>
+  </div>
+
+  <div id="card4" class="card draggable center downloads">
+    Downloads<br/><br/><br/><br/>
+    <a href="downloads.html"><img class="img-responsive" src="img/cloud2.png"></a>
+  </div>
+  
+  <div id="card5" class="card draggable center generators">
+    Generators<br/><br/><br/><br/>
+    <a href="generators.html"><img class="img-responsive" src="img/database.jpg"></a>
+  </div>
+  <div id="card6" class="card draggable center commissions">
+    Commissions<br/><br/><br/><br/>
+    <a href="commissions.html"><img class="img-responsive" src="img/document.jpg"></a>
+  </div>
+
+
+
   <!-- END: CARDS ROW 2 -->
 
-  <!--   <div id="card2" class="card draggable center">
+<!--   <div id="card11" class="card draggable center">
+    <em>The Future of Work<br/>Testimonials</em><br/><br/><br/><br/>
+    <iframe src="https://player.vimeo.com/video/163223022?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
+    <small>Video, testimonials</small>
+  </div>  
+
+  <div id="card2" class="card draggable center">
     <em>Confidence Generator</em><br/><br/><br/><br/>
     <iframe src="https://player.vimeo.com/video/154158324?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
     <small>Video, Commissioned Performance</small>
@@ -655,17 +664,23 @@
   <div id="card3" class="card draggable center rituals">
     <em>Rituals for Removing<br/>Creative Blocks</em><br/>
     <a href="media/RitualsForRemovingCreativeBlocks.pdf"><img class="img-responsive" src="img/download-rituals.jpg"></a>
-  </div> -->
+  </div> 
 
-  <!--   <div id="card9" class="card draggable center sweepstakes">
+  <div id="card9" class="card draggable center sweepstakes">
     <img class="new" src="img/new.gif"/>
     Sweepstakes<br/><br/><br/><br/>
     <a href="sweepstakes.html"><img class="img-responsive" src="img/sweepstakes-trophy2.gif"></a>
     <br/><br/>
     <small>Enter to Win!</small>
-  </div> -->
+  </div> 
 
-  <!--   <div id="card17" class="card draggable center critical-texts">
+  <div id="card13" class="card draggable center">
+    <em>They Paid Me to Give<br/>You a Tour of the Internet</em><br/><br/>
+    <a href="temporaryartreview.html"><img class="img-responsive" src="img/tar.gif"></a><br/>
+    <small>Net Art Intervention, Commissioned by Temporary Art Review</small>
+  </div>
+
+  <div id="card17" class="card draggable center critical-texts">
     Texts<br/><br/>
     <small>critical art practice and the sharing economy<br/><br/>
     mala onda: a guide for surviving the next five years (or the next 5 minutes) of accelerated change in post-capitalism's black magic vortex<br/><br/>
