--- a/index.html
+++ b/index.html
@@ -383,12 +383,6 @@
         <span class="dnl-link-text">About</span>
       </a>
     </li>
-<!--     <li>
-      <a href="index.html">
-        <span class="fa fa-home dnl-link-icon"></span>
-        <span class="dnl-link-text">Home</span>
-      </a>
-    </li> -->
     <p class="dnl-nav-title">Contribute</p>
 <!--     <li>
       <a href="cse.html">
@@ -401,6 +395,15 @@
         <span class="fa fa-shopping-cart dnl-link-icon"></span>
         <span class="dnl-link-text">Store</span>
       </a>
+    </li>
+    <li>
+      <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+<input type="hidden" name="cmd" value="_s-xclick" />
+<input type="hidden" name="hosted_button_id" value="QT8H4R3XAKMNW" />
+<input type="image" class="donate shake-chunk" src="img/donate3.png" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+<img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1" />
+</form>
+
     </li>        
   </ul>      
 </div><!-- /.dash-navbar-left -->
@@ -605,14 +608,14 @@
 
   <div id="eternal" class="card draggable center">
     <em><span class="title shake-slow shake-constant">Eternal Boy Playground</span></em><br/><br/>
-    <a href="https://tttelematiccc.com/" target="_blank"><img class="img-responsive" src="img/eternal-hodl.png"></a><br/>
-    <small>Solo Exhibition<br/><a href="https://tttelematiccc.com/" target="_blank">Telematic</a><br/>San Francisco, CA<br/>Dec 15 2018 - Feb 2 2019<br/></small>
+    <a href="https://tttelematiccc.com/portfolio-item/eternal-boy-playground/" target="_blank"><img class="img-responsive" src="img/eternal-hodl.png"></a><br/>
+    <small>Solo Exhibition<br/><a href="https://tttelematiccc.com/portfolio-item/eternal-boy-playground/" target="_blank">Telematic</a><br/>San Francisco, CA<br/>Dec 15 2018 - Feb 2 2019<br/></small>
   </div>
 
   <div id="twins" class="card draggable center">
     <em><span class="title shake-slow shake-constant">Five Twins</span></em><br/><br/><br/>
     <iframe src="https://player.vimeo.com/video/154158545?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
-    <small>“Liat Berdugo + Emily Martinez as Five Twins” is an ongoing commission of fake twins sourced from Fiverr.com</small>
+    <!-- <small>“Liat Berdugo + Emily Martinez as Five Twins” is an ongoing commission of fake twins sourced from Fiverr.com</small> -->
   </div>
 
   <div id="money" class="card draggable center internet-empire">
@@ -678,7 +681,7 @@
     <br/><br/>
     <strong>1.2019</strong> <em>Making You</em>, Entanglements, <a href="http://herenvironment.com/" target="_blank">Her Environment</a>, <a href="http://theyardsgallery.com" target="_blank">Yards Gallery</a>, Chicago, IL, Jan 26 - Feb 15 2019
     <br/><br/>
-    <strong>12.2018</strong> <em>Eternal Boy Playground</em>, <a href="https://tttelematiccc.com/" target="_blank">Telematic</a>, San Francisco, CA<br/>Solo Exhibition, Dec 15 2018 - February 2 2019
+    <strong>12.2018</strong> <em>Eternal Boy Playground</em>, <a href="https://tttelematiccc.com/portfolio-item/eternal-boy-playground/" target="_blank">Telematic</a>, San Francisco, CA<br/>Solo Exhibition, Dec 15 2018 - February 2 2019
     <br/><br/>
     <strong>11.2018</strong> Emergancy Grant to help fund <em>Eternal Boy Playground</em>, <a href="https://www.foundationforcontemporaryarts.org/recipients/2018emergencygrantsvisualarts" target="_blank">Foundation for Contemporary Arts</a> New York, NY
     <br/><br/>
@@ -759,8 +762,8 @@
   </div>
   <div id="featured" class="mobile center">
     <em><span class="title shake-slow shake-constant">Eternal Boy Playground</span></em><br/><br/>
-    <a href="https://tttelematiccc.com/" target="_blank"><img class="img-responsive" src="img/eternal-hodl.png"></a><br/>
-    <small>Solo Exhibition<br/><a href="https://tttelematiccc.com/" target="_blank">Telematic</a><br/><!-- 323 10th St. (at Folsom)<br/> -->San Francisco, CA<br/>Dec 15 2018 - Feb 2 2019<br/><!-- <span class="closing smaller shake-little shake-constant shake-constant--hover"><strong>Closing Reception: Feb 2nd, 4-6pm</strong></span> --></small>
+    <a href="https://tttelematiccc.com/portfolio-item/eternal-boy-playground/" target="_blank"><img class="img-responsive" src="img/eternal-hodl.png"></a><br/>
+    <small>Solo Exhibition<br/><a href="https://tttelematiccc.com/portfolio-item/eternal-boy-playground/" target="_blank">Telematic</a><br/><!-- 323 10th St. (at Folsom)<br/> -->San Francisco, CA<br/>Dec 15 2018 - Feb 2 2019<br/></small>
   </div>
   <div id="news" class="mobile">
     <div class="center"><span class="mobile-title shake-slow shake-constant">News</span></div><br/>
@@ -771,7 +774,7 @@
     <br/><br/>
     <strong>1.2019</strong> <em><a href="https://www.kqed.org/arts/13849586/crypto-bros-eternal-boy-playground-anxious-to-make" target="_blank">Crypto-Bros Beware: These Artists Aren’t Buying Your Version of Utopia</a></em> review of <em>Eternal Boy Playground</em> by Blythe Sheldon, KQED Arts
     <br/><br/>
-    <strong>1.2019</strong> <em>Liat Berdugo + Emily Martinez as Five Twins</em>, Self as Actor: Colonising Identity, <a href="http://www.neme.org/nac/" target="_blank">NeMe Arts Centre</a>, Limassol, Cyprus, February 15 - March 25 2019
+    <strong>1.2019</strong> <em>Liat Berdugo + Emily Martinez as Five Twins</em>, <a href="https://currentsnewmedia.org/festivals/currents-new-media-2019/" target="_blank">Currents New Media Festival</a>, Santa Fe, New Mexico, June 7-23 2019
     <br/><br/>
     <strong>1.2019</strong> <em>Liat Berdugo + Emily Martinez as Five Twins</em>, <a href="https://awmat2019.wordpress.com/" target="_blank">Alliance of Women in Media Arts and Technology</a>, University of California Santa Barbara, February 7-9 2019
     <br/><br/>
