--- a/wwwork.html
+++ b/wwwork.html
@@ -368,12 +368,6 @@
         <span class="dnl-link-text">About</span>
       </a>
     </li>
-<!--     <li>
-      <a href="index.html">
-        <span class="fa fa-home dnl-link-icon"></span>
-        <span class="dnl-link-text">Home</span>
-      </a>
-    </li> -->
     <p class="dnl-nav-title">Contribute</p>
 <!--     <li>
       <a href="cse.html">
@@ -386,6 +380,15 @@
         <span class="fa fa-shopping-cart dnl-link-icon"></span>
         <span class="dnl-link-text">Store</span>
       </a>
+    </li>
+    <li>
+      <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+<input type="hidden" name="cmd" value="_s-xclick" />
+<input type="hidden" name="hosted_button_id" value="QT8H4R3XAKMNW" />
+<input type="image" class="donate shake-chunk" src="img/donate3.png" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+<img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1" />
+</form>
+
     </li>        
   </ul>      
 </div><!-- /.dash-navbar-left -->
